# soar

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  default.nix  install.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: auto-assign.yaml  auto_respond.yaml  nightly.yaml  release.yaml
soar-db/: Cargo.toml
soar-db/migrations/core/: V1__initial.sql
soar-db/migrations/metadata/: V1__initial.sql
soar-db/src/: lib.rs
src/: cli.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: color.rs  config.rs  constant.rs  file.rs  grid.rs  health.rs  log.rs  mod.rs  util.rs
src/misc/: download.rs  health.rs  mod.rs
src/misc/download/: github.rs  gitlab.rs  mod.rs
src/package/: appimage.rs  build.rs  download_tracker.rs  fetch_repo.rs  image.rs  install.rs  install_tracker.rs  mod.rs  registry.rs  remove.rs  run.rs  search.rs  update.rs  util.rs
src/registry/: fetcher.rs  installed.rs  loader.rs  mod.rs  storage.rs
src/registry/package/: appimage.rs  image.rs  install.rs  mod.rs  remove.rs  run.rs  update.rs
