[package]
name = "soar"
description = "A modern package manager for Linux"
license = "MIT"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.89"
backhand = "0.18.0"
blake3 = "1.5.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive"] }
futures = "0.3.30"
image = { version = "0.25.2", default-features = false, features = ["png"] }
libc = "0.2.159"
reqwest = { version = "0.12.8", features = ["blocking", "http2", "rustls-tls", "stream"], default-features = false }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
xattr = { version = "1.3.1", default-features = false }
