[package]
name = "soar-cli"
version = "0.4.1"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
description = "A modern package manager for Linux"
license = "MIT"
edition = "2021"
repository = "https://github.com/QaidVoid/soar"
default-run = "soar"
exclude = ["docs"]

[[bin]]
name = "soar"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.89"
backhand = "0.18.0"
base64 = "0.22.1"
blake3 = "1.5.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["cargo", "derive"] }
futures = "0.3.30"
icy_sixel = "0.1.2"
image = { version = "0.25.2", default-features = false, features = ["png"] }
indicatif = "0.17.8"
libc = "0.2.159"
reqwest = { version = "0.12.8", features = ["blocking", "http2", "rustls-tls", "stream"], default-features = false }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strip-ansi-escapes = "0.2.0"
termion = "4.0.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
which = "6.0.3"
xattr = { version = "1.3.1", default-features = false }
